# AIRS

./: README.md
AIRS/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
AIRS/airs/: __init__.py  cli.py
AIRS/airs/api/: __init__.py  main.py  schemas.py
AIRS/airs/api/routes/: __init__.py  alerts.py  backtest.py  features.py  health.py  recommendations.py
AIRS/airs/backtest/: __init__.py  analysis.py  costs.py  engine.py  metrics.py  portfolio.py
AIRS/airs/config/: __init__.py  assets.yaml  settings.py
AIRS/airs/data/: __init__.py  aggregator.py  alpha_vantage.py  base.py  fred.py  quality.py  schemas.py  yahoo.py
AIRS/airs/db/: __init__.py  models.py  repository.py  session.py
AIRS/airs/features/: __init__.py  base.py  composite.py  credit.py  cross_asset.py  macro.py  pipeline.py  rates.py  regime.py  volatility.py
AIRS/airs/models/: __init__.py  base.py  baseline.py  ensemble.py  tree_ensemble.py  validation.py
AIRS/airs/monitoring/: __init__.py  alerts.py  drift.py  health.py
AIRS/airs/recommendations/: __init__.py  engine.py  explainability.py  narratives.py
AIRS/airs/targets/: __init__.py  drawdown.py  labels.py
AIRS/airs/utils/: __init__.py  logging.py  stats.py  time.py
AIRS/dags/: __init__.py  daily_pipeline.py  data_quality.py  model_retrain.py
AIRS/dashboard/: .env.example  package-lock.json  package.json  tailwind.config.js
AIRS/dashboard/app/: globals.css  layout.tsx  page.tsx
AIRS/dashboard/components/: PortfolioChart.tsx  Recommendations.tsx  RiskGauge.tsx  StatusIndicator.tsx
AIRS/dashboard/lib/: api.ts
AIRS/docs/: API.md  BACKTEST.md  DATA.md  DEPLOYMENT.md  FEATURES.md  MODELS.md
AIRS/scripts/: fetch_data.py  run_backtest.py  train_model.py
AIRS/tests/: __init__.py  conftest.py
AIRS/tests/integration/: __init__.py  test_pipeline.py
AIRS/tests/unit/: __init__.py  test_backtest.py  test_features.py  test_models.py
